# strataframe

./: .gitignore  README.md  pyproject.toml
config/: default.yaml  defaults.py  schema.py
runs/runA/00_wells_gr/: diagnostics.json  manifest.json  progress.json  state.json
runs/runA/01_bins/: bins.csv  bins_meta.csv  manifest.json
runs/runA/01_graph/: diagnostics.json  graph_edges.csv  manifest.json
runs/runA/02_dtw/: dtw_edges.csv
runs/runA/02_dtw_cache/: diagnostics.json  gr_vectors_qc.csv  manifest.json
runs/runA/02_reps/: cell_typewells.csv  rep_placement.csv  rep_selection_diagnostics.json  representatives.csv  representatives_meta.json  step2_state.json
runs/runA/03_corr/: dtw_edges.csv  dtw_paths.npz  framework_diagnostics.json  framework_edges.csv  framework_nodes.csv  rep_arrays_meta.csv  rep_edges_candidates.csv  rgt_shifts_resampled.npz
runs/runA/04_type_columns/: cell_interval_stats.csv  cell_tops.npz  cell_type_logs.npz  chronostrat_key.json  step4_diagnostics.json
scripts/: curve_vocab.py  profile_las.py  run_strataframe.py  unzip_las.py
src/strataframe/: orchestrator.py  run_build_framework.py
src/strataframe/chronolog/: __init__.py  geo.py  graph.py  io.py  shared.py
src/strataframe/cli/: run_block_solve.py
src/strataframe/config/: defaults.py  schema.py
src/strataframe/contracts/: step2_outputs.py
src/strataframe/correlation/: __init__.py  dtw.py  framework.py  paths_npz.py
src/strataframe/curves/: normalize_header.py
src/strataframe/dtw/: align.py
src/strataframe/io/: csv.py  (+8 more)
tests/: test_las_utils.py  test_smoke.py
(+159 files in other folders)
