[project]
name = "strataframe"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.11",
  "numba>=0.59",
  "networkx>=3.2",
  "scikit-learn>=1.4",
  "pyarrow>=15.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
geo = ["shapely>=2.0", "pyproj>=3.6"]
dtw = ["dtaidistance>=2.3"]
ray = ["ray>=2.10"]
zarr = ["zarr>=2.17"]

[project.scripts]
strataframe-backbone = "strataframe.cli.run_backbone:app"
strataframe-block    = "strataframe.cli.run_block_solve:app"
strataframe-stitch   = "strataframe.cli.run_stitch:app"
strataframe-qc       = "strataframe.cli.run_qc:app"
